import { describe, expect, it } from 'vitest'
import type { Link, Project, SwitchInstance, TenantVrf, VlanMapping } from '../domain/types'
import { computeIpPlan } from '../ip/allocate'
import { generateSwitchConfig } from './generateSwitchConfig'

function baseSettings(overrides: Partial<Project['settings']> = {}): Project['settings'] {
  return {
    fabricMode: 'evpn',
    underlayProtocol: 'ebgp',
    asnScheme: 'per-device-unique',
    baseAsn: 65000,
    pools: {
      underlayP2P: { supernet: '10.0.0.0/24' },
      loopback: { supernet: '10.255.0.0/24' },
      vsxKeepalive: { supernet: '10.255.255.0/24' },
      mgmt: { supernet: '192.168.1.0/24' },
      tenantSubnets: { supernet: '10.10.0.0/16' },
    },
    tenantSubnetPrefixLen: 24,
    vniAllocation: { l2VniStrategy: 'vlan-plus-offset', l2VniOffset: 10000, l3VniPoolStart: 100000 },
    jumboMtu: true,
    baseline: { ntpServers: [], syslogServers: [], aaaLocalFallback: true },
    ...overrides,
  }
}

function sw(id: string, role: SwitchInstance['role'], sequence: number, catalogId: string, vsxGroupId?: string): SwitchInstance {
  return { id, catalogId, name: id.toUpperCase(), role, sequence, vsxGroupId, position: { x: 0, y: 0 } }
}

function link(id: string, aId: string, aPort: string, bId: string, bPort: string, kind: Link['kind']): Link {
  return { id, a: { switchInstanceId: aId, portName: aPort }, b: { switchInstanceId: bId, portName: bPort }, kind }
}

function buildFixture(settingsOverrides: Partial<Project['settings']> = {}) {
  const spine1 = sw('spine1', 'spine', 1, 'aruba-8325-32c')
  const spine2 = sw('spine2', 'spine', 2, 'aruba-8325-32c')
  const leaf1 = sw('leaf1', 'leaf', 1, 'aruba-8325-48y8c', 'vsxA')
  const leaf2 = sw('leaf2', 'leaf', 2, 'aruba-8325-48y8c', 'vsxA')

  const links: Link[] = [
    link('l1', 'spine1', '1/1/1', 'leaf1', '1/1/49', 'underlay-p2p'),
    link('l2', 'spine1', '1/1/2', 'leaf2', '1/1/49', 'underlay-p2p'),
    link('l3', 'spine2', '1/1/1', 'leaf1', '1/1/50', 'underlay-p2p'),
    link('l4', 'spine2', '1/1/2', 'leaf2', '1/1/50', 'underlay-p2p'),
    link('l5', 'leaf1', '1/1/51', 'leaf2', '1/1/51', 'vsx-isl'),
  ]

  const vrfs: TenantVrf[] = [{ id: 'vrfA', name: 'CUSTOMER-A' }]
  const vlans: VlanMapping[] = [
    { id: 'v10', vlanId: 10, name: 'WEB-TIER', vrfId: 'vrfA' },
    { id: 'v20', vlanId: 20, name: 'DB-TIER', vrfId: 'vrfA' },
  ]

  const project: Project = {
    formatVersion: 1,
    projectName: 'fixture',
    createdAt: '',
    updatedAt: '',
    settings: baseSettings(settingsOverrides),
    switches: [spine1, spine2, leaf1, leaf2],
    links,
    vlans,
    vrfs,
    hostConnections: [],
  }
  const ipPlan = computeIpPlan(project)
  return { project, ipPlan }
}

describe('generateSwitchConfig — EVPN, eBGP underlay', () => {
  const { project, ipPlan } = buildFixture()

  it('produces no allocation errors for the fixture topology', () => {
    expect(ipPlan.errors).toHaveLength(0)
  })

  it('generates a spine config (golden)', () => {
    expect(generateSwitchConfig('spine1', project, ipPlan)).toMatchSnapshot()
  })

  it('generates a VSX leaf config (golden)', () => {
    expect(generateSwitchConfig('leaf1', project, ipPlan)).toMatchSnapshot()
  })

  it('leaf config includes VSX, VLAN/VNI mapping, VRF RD/RT, EVPN VLAN RD/RT, and EVPN address-family', () => {
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    expect(config).toContain('vsx')
    expect(config).toContain('role primary')
    expect(config).toContain('vlan 10')
    expect(config).toContain('vni 10010')
    expect(config).toContain('vrf CUSTOMER-A')
    expect(config).toContain('rd 65003:1')
    expect(config).toContain('route-target export 65003:1')
    expect(config).toMatch(/evpn\n {4}vlan 10\n {8}rd auto\n {8}route-target both auto/)
    expect(config).toContain('address-family l2vpn evpn')
    expect(config).toContain('interface vxlan 1')
  })

  it('spine config has no VLAN/VNI/VSX sections', () => {
    const config = generateSwitchConfig('spine1', project, ipPlan)
    expect(config).not.toContain('vn-vni')
    expect(config).not.toContain('vsx-sync')
    expect(config).not.toContain('interface vxlan')
  })
})

describe('generateSwitchConfig — VSX keepalive interface', () => {
  it('assigns the keepalive IP to a real interface when a link is marked vsx-keepalive', () => {
    const { project } = buildFixture()
    const withKeepalive: Project = {
      ...project,
      links: [...project.links, link('l6', 'leaf1', '1/1/52', 'leaf2', '1/1/52', 'vsx-keepalive')],
    }
    const plan = computeIpPlan(withKeepalive)
    const config = generateSwitchConfig('leaf1', withKeepalive, plan)

    expect(config).toContain('interface 1/1/52')
    expect(config).toContain('vsx-keepalive-to-LEAF2')
    expect(config).toContain(`ip address ${plan.vsxKeepalives['vsxA'].primaryIp}/31`)
    expect(config).not.toContain('No link marked "vsx-keepalive"')
  })

  it('without a vsx-keepalive link, flags that the keepalive IPs are unassigned', () => {
    const { project, ipPlan } = buildFixture()
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    expect(config).toContain('No link marked "vsx-keepalive"')
  })
})

describe('generateSwitchConfig — access role', () => {
  it('generates only hostname/mgmt/trunk-uplink config, no fabric/VXLAN sections', () => {
    const access1: SwitchInstance = { id: 'access1', catalogId: 'aruba-6200f-48g', name: 'ACCESS1', role: 'access', sequence: 1, position: { x: 0, y: 0 } }
    const leaf1: SwitchInstance = sw('leaf1', 'leaf', 1, 'aruba-8325-48y8c')
    const project: Project = {
      formatVersion: 1,
      projectName: 'access-fixture',
      createdAt: '',
      updatedAt: '',
      settings: baseSettings(),
      switches: [access1, leaf1],
      links: [link('l1', 'access1', '1/1/49', 'leaf1', '1/1/1', 'unassigned')],
      vlans: [],
      vrfs: [],
      hostConnections: [],
    }
    const ipPlan = computeIpPlan(project)
    const config = generateSwitchConfig('access1', project, ipPlan)

    expect(config).toContain('hostname ACCESS1')
    expect(config).toContain('interface mgmt')
    expect(config).toContain('interface 1/1/49')
    expect(config).toContain('vlan trunk allowed all')
    expect(config).not.toContain('router bgp')
    expect(config).not.toContain('vsx')
    expect(config).not.toContain('interface vxlan')
    expect(config).not.toContain('interface loopback')
  })

  it('access switches are excluded from loopback/ASN allocation', () => {
    const access1: SwitchInstance = { id: 'access1', catalogId: 'aruba-6200f-48g', name: 'ACCESS1', role: 'access', sequence: 1, position: { x: 0, y: 0 } }
    const project: Project = {
      formatVersion: 1,
      projectName: 'access-fixture-2',
      createdAt: '',
      updatedAt: '',
      settings: baseSettings(),
      switches: [access1],
      links: [],
      vlans: [],
      vrfs: [],
      hostConnections: [],
    }
    const ipPlan = computeIpPlan(project)
    expect(ipPlan.loopbacks.access1).toBeUndefined()
    expect(ipPlan.asns.access1).toBeUndefined()
    expect(ipPlan.mgmtIps.access1).toBeDefined()
  })
})

describe('generateSwitchConfig — EVPN, OSPF underlay', () => {
  const { project, ipPlan } = buildFixture({ underlayProtocol: 'ospf' })

  it('generates a spine config with OSPF + route-reflector EVPN peering (golden)', () => {
    expect(generateSwitchConfig('spine1', project, ipPlan)).toMatchSnapshot()
  })

  it('generates a leaf config with OSPF underlay + multihop EVPN peering (golden)', () => {
    expect(generateSwitchConfig('leaf1', project, ipPlan)).toMatchSnapshot()
  })

  it('leaf peers EVPN toward spine loopbacks with ebgp-multihop', () => {
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    expect(config).toContain('ebgp-multihop 3')
    expect(config).toContain('router ospf 1')
  })

  it('spine acts as EVPN route-reflector toward leaves', () => {
    const config = generateSwitchConfig('spine1', project, ipPlan)
    expect(config).toContain('route-reflector-client')
  })
})

describe('generateSwitchConfig — static VXLAN (no EVPN)', () => {
  const { project, ipPlan } = buildFixture({ fabricMode: 'static-vxlan' })

  it('generates a VSX leaf config with static remote-VTEP flood lists (golden)', () => {
    expect(generateSwitchConfig('leaf1', project, ipPlan)).toMatchSnapshot()
  })

  it('generates a spine-role switch config too — static mode uses one recipe for every role', () => {
    expect(generateSwitchConfig('spine1', project, ipPlan)).toMatchSnapshot()
  })

  it('has no BGP EVPN address-family, RD, route-target, or evpn context anywhere', () => {
    const leaf = generateSwitchConfig('leaf1', project, ipPlan)
    const spine = generateSwitchConfig('spine1', project, ipPlan)
    expect(leaf).not.toContain('l2vpn evpn')
    expect(leaf).not.toMatch(/^\s*rd /m)
    expect(leaf).not.toContain('route-target')
    expect(leaf).not.toMatch(/^evpn$/m)
    expect(spine).not.toContain('l2vpn evpn')
  })

  it('spines carry no VLANs/VNIs and leaf1 has no remote VTEP peers in this two-leaf-VSX-pair fixture', () => {
    const leaf = generateSwitchConfig('leaf1', project, ipPlan)
    const spine = generateSwitchConfig('spine1', project, ipPlan)
    // leaf1's only other VLAN-10/20 carrier is leaf2, which is excluded as its own VSX peer
    // (shared VTEP via ISL, not a remote tunnel) — spines correctly carry no VLANs at all.
    expect(leaf).not.toContain('remote-vtep')
    expect(leaf).toContain('No remote VTEP peers found')
    expect(spine).not.toContain('vlan 10')
    expect(spine).not.toContain('interface vxlan')
  })
})

describe('generateSwitchConfig — day-1 baseline', () => {
  it('emits NTP, syslog, AAA, and banner on every switch, spine included', () => {
    const { project, ipPlan } = buildFixture({
      baseline: {
        ntpServers: ['10.0.100.1', '10.0.100.2'],
        syslogServers: ['10.0.100.10'],
        aaaLocalFallback: true,
        bannerText: 'Authorized access only\nAll activity is logged.',
      },
    })
    const spine = generateSwitchConfig('spine1', project, ipPlan)
    const leaf = generateSwitchConfig('leaf1', project, ipPlan)

    for (const config of [spine, leaf]) {
      expect(config).toContain('ntp server 10.0.100.1 iburst')
      expect(config).toContain('ntp server 10.0.100.2 iburst')
      expect(config).toContain('logging 10.0.100.10')
      expect(config).toContain('aaa authentication login default local')
      expect(config).toContain('banner motd ^')
      expect(config).toContain('Authorized access only')
      expect(config).toContain('All activity is logged.')
    }
  })

  it('omits AAA fallback and banner when unset', () => {
    const { project, ipPlan } = buildFixture()
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    expect(config).toContain('aaa authentication login default local')
    expect(config).not.toContain('banner motd')
  })

  it('with AAA fallback disabled and no servers, emits nothing', () => {
    const { project, ipPlan } = buildFixture({
      baseline: { ntpServers: [], syslogServers: [], aaaLocalFallback: false },
    })
    const config = generateSwitchConfig('spine1', project, ipPlan)
    expect(config).not.toContain('ntp server')
    expect(config).not.toContain('logging ')
    expect(config).not.toContain('aaa authentication login default local')
  })
})

describe('generateSwitchConfig — BGP MD5 authentication', () => {
  it('adds a password line to every underlay eBGP neighbor when set', () => {
    const { project, ipPlan } = buildFixture({ bgpAuthPassword: 'S3cr3t!' })
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    const neighborLines = config.split('\n').filter((l) => l.trim().startsWith('neighbor') && l.includes('remote-as'))
    const passwordLines = config.split('\n').filter((l) => l.includes('password plaintext S3cr3t!'))
    expect(neighborLines.length).toBeGreaterThan(0)
    expect(passwordLines.length).toBe(neighborLines.length)
  })

  it('adds password lines to OSPF-underlay EVPN multihop peerings too', () => {
    const { project, ipPlan } = buildFixture({ underlayProtocol: 'ospf', bgpAuthPassword: 'S3cr3t!' })
    const leaf = generateSwitchConfig('leaf1', project, ipPlan)
    const spine = generateSwitchConfig('spine1', project, ipPlan)
    expect(leaf).toContain('password plaintext S3cr3t!')
    expect(spine).toContain('password plaintext S3cr3t!')
  })

  it('omits password lines entirely when unset', () => {
    const { project, ipPlan } = buildFixture()
    const config = generateSwitchConfig('leaf1', project, ipPlan)
    expect(config).not.toContain('password plaintext')
  })
})

describe('generateSwitchConfig — host/server access ports', () => {
  it('single-homed host port: plain interface with vlan config, no LAG', () => {
    const { project: base } = buildFixture()
    const project: Project = {
      ...base,
      hostConnections: [
        {
          id: 'h1',
          name: 'web-01',
          ports: [{ switchInstanceId: 'leaf1', portName: '1/1/1' }],
          mode: 'access',
          accessVlanId: 10,
        },
      ],
    }
    const ipPlan = computeIpPlan(project)
    const config = generateSwitchConfig('leaf1', project, ipPlan)

    expect(config).toContain('interface 1/1/1')
    expect(config).toContain('description host-web-01')
    expect(config).toContain('vlan access 10')
    expect(ipPlan.hostLagIds['h1']).toBeUndefined()
  })

  it('dual-homed host port: member ports reference a shared LAG, LAG carries vlan config + LACP active', () => {
    const { project: base } = buildFixture()
    const project: Project = {
      ...base,
      hostConnections: [
        {
          id: 'h1',
          name: 'esxi-01',
          ports: [
            { switchInstanceId: 'leaf1', portName: '1/1/1' },
            { switchInstanceId: 'leaf2', portName: '1/1/1' },
          ],
          mode: 'trunk',
          trunkNativeVlanId: 1,
          trunkAllowedVlans: [10, 20],
        },
      ],
    }
    const ipPlan = computeIpPlan(project)
    const lagId = ipPlan.hostLagIds['h1']
    expect(lagId).toBeDefined()

    const leaf1Config = generateSwitchConfig('leaf1', project, ipPlan)
    const leaf2Config = generateSwitchConfig('leaf2', project, ipPlan)

    for (const config of [leaf1Config, leaf2Config]) {
      expect(config).toContain(`lag ${lagId}`)
      expect(config).toContain(`interface lag ${lagId}`)
      expect(config).toContain('description host-esxi-01')
      expect(config).toContain('vlan trunk native 1')
      expect(config).toContain('vlan trunk allowed 10,20')
      expect(config).toContain('lacp mode active')
    }
  })

  it('a host connection touching only leaf1 does not appear in leaf2s config', () => {
    const { project: base } = buildFixture()
    const project: Project = {
      ...base,
      hostConnections: [
        {
          id: 'h1',
          name: 'web-01',
          ports: [{ switchInstanceId: 'leaf1', portName: '1/1/1' }],
          mode: 'access',
          accessVlanId: 10,
        },
      ],
    }
    const ipPlan = computeIpPlan(project)
    const leaf2Config = generateSwitchConfig('leaf2', project, ipPlan)
    expect(leaf2Config).not.toContain('host-web-01')
  })
})
